Fixed dark mode

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -19,7 +19,7 @@
       margin-right: 1rem;
     }
   }
-  @media only screen and (max-width: 767px) {
+  @media only screen and (max-width: 575px) {
     &__links {
       display: none;
     }
