--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0 2rem;
+}
+
+body {
+  background-color: #000;
+  color: #fff;
 }
 
 code {
